--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
+    "node-uuid": "^1.4.8",
     "react-addons-test-utils": "^15.5.1",
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
