--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.2",
+    "deep-freeze-strict": "^1.1.1",
     "expect": "^1.20.2",
     "foundation-sites": "^6.3.1",
     "jquery": "^3.2.1",
