--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-sass": "^4.5.3",
     "node-uuid": "^1.4.8",
     "react-addons-test-utils": "^15.5.1",
+    "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
