--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "start": "node server.js"
+    "test": "NODE_ENV=test karma start",
+    "build": "webpack",
+    "start": "npm run build && node server.js"
   },
   "author": "Vlad Bessonov",
   "license": "MIT",
@@ -17,9 +18,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
-  },
-  "devDependencies": {
+    "react-router-dom": "^4.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -30,13 +29,6 @@
     "expect": "^1.20.2",
     "foundation-sites": "^6.3.1",
     "jquery": "^3.2.1",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "node-uuid": "^1.4.8",
@@ -48,5 +40,14 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.5.1"
+  },
+  "devDependencies": {
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.4.2"
   }
 }
