--- a/package.json
+++ b/package.json
@@ -12,13 +12,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.1",
-    "express": "^4.15.2",
-    "firebase": "^4.1.2",
-    "query-string": "^4.3.4",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -27,18 +20,27 @@
     "css-loader": "^0.28.2",
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.20.2",
+    "express": "^4.15.2",
+    "firebase": "^4.1.2",
     "foundation-sites": "^6.3.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "node-uuid": "^1.4.8",
+    "query-string": "^4.3.4",
+    "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
+    "uuid": "^3.0.1",
     "webpack": "^2.5.1"
   },
   "devDependencies": {
