--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test karma start",
+    "test": "cross-env NODE_ENV=test karma start",
     "build": "webpack",
     "start": "npm run build && node server.js"
   },
@@ -25,6 +25,7 @@
     "foundation-sites": "^6.3.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "node-env-file": "^0.1.8",
     "node-sass": "^4.5.3",
     "node-uuid": "^1.4.8",
     "query-string": "^4.3.4",
@@ -44,6 +45,7 @@
     "webpack": "^2.5.1"
   },
   "devDependencies": {
+    "cross-env": "^5.0.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-mocha": "^1.3.0",
